--- a/MathQuiz.html
+++ b/MathQuiz.html
@@ -31,6 +31,7 @@ body {
     
     <h1>Math Game</h1>
     <p>Lives:5</p>
+    <div id="root"></div>
     <div id="lives"></div>
     <div id="game"></div>
     <script>
@@ -50,19 +51,18 @@ document.InnerHTML(`your score is:${score}`)
 for (let i = 0; i < numQuestions; i++) {
     let num1 = Math.floor(Math.random() * 10) + 1;
     let num2 = Math.floor(Math.random() * 10) + 1;
-    let answer = prompt(`What is ${num1} + ${num2}?`);
+    let answer = document.InnnerHTML(`What is ${num1} + ${num2}?`);
     if (answer == num1 + num2) {
         score++;
     }
 }
-
-alert(`You got ${score} out of ${numQuestions} questions right!`);
+document.InnerHTML(`You got ${score} out of ${numQuestions} questions right!`);
 
 
 console.log(TheGame());
 
 function ExitTheGame(){
-    alert("Thank you for playing the game...");
+    document.InnerHTML("Thank you for playing the game...");
 
 }
 let ContinuationOrExit=prompt("press 1 if you would like to continue\n press 2 if you would like to eit the game");
@@ -75,7 +75,7 @@ switch(ContinuationOrExit){
         ExitTheGame();
     break;
     default:
-       alert("the option that you choose is not in the availabe choices");
+       document.InnerHTML("the option that you choose is not in the availabe choices");
 
 }
 
