--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="assets/vendor/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/vendor/fontawesome-free-6.3.0-web/css/all.min.css">
   <!-- Custom CSS -->
-  <style>
+  <link rel="stylesheet" href="./css/app.css">
+  <!-- <style>
     *{
         margin: 0;
     }
@@ -25,7 +26,7 @@
     .lives {
         color: rgb(245, 76, 76);
     }
-  </style>
+  </style> -->
 </head>
 <body>
     <div id="root">
