--- a/tmp.html
+++ b/tmp.html
@@ -130,7 +130,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header border-white">
-        <h5 class="modal-title text-primary" id="exampleModalLabel">Game over!!!</h5>
+        <h5 class="modal-title text-danger" id="exampleModalLabel">Game over!!!</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
